# Recruitment-Assistant

./: .env.example  .gitignore  README.md  api.py  auth.py  check_models.py  package-lock.json  pyproject.toml  seed_db.py
data/: recruitment.db
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ai-evaluation.tsx  auth-modal.tsx  candidate-profile.tsx  dashboard.tsx  leaderboard.tsx  profile-modal.tsx  settings-modal.tsx  sidebar.tsx  success-banner.tsx  top-nav.tsx
frontend/lib/: auth.ts
src/: orchestrator.py  schemas.py
src/agents/: interview_agent.py  match_agent.py  rank_agent.py  resume_agent.py
src/ui/: app.py
