[project] 
name = "recruitment-assistant" 
version = "0.1.0" 
description = "AI-Powered Recruitment Assistant using MCP" 
dependencies = [ 
    "mcp[cli]>=0.1.0", 
    "pydantic>=2.0.0", 
    "fastmcp>=0.4.0", 
    "fastapi>=0.100.0",       
    "python-multipart>=0.0.9",
] 
[tool.vercel]
entrypoint = "api:app"
