[project] 
name = "recruitment-assistant" 
version = "0.1.0" 
description = "AI-Powered Recruitment Assistant using MCP" 
dependencies = [ 
    "mcp[cli]>=0.1.0", 
    "pydantic>=2.0.0", 
    "fastmcp>=0.4.0", 
    "fastapi>=0.100.0",       
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "google-genai>=0.1.0",
    "tenacity>=8.2.0",
    "uvicorn>=0.27.0"
] 
[tool.vercel]
entrypoint = "api:app"
